# train_llm

./: .gitignore  README.md  pyproject.toml  test_function_call.py
core/: __init__.py  data_pipeline.py  runtime.py  train_lib.py
core/docs/: README.md  README_en.md  article-从零训练小模型.md  dataset.md
trainer/: 1_prepare_data.py  2_pretrain.py  3_sft.py  4_dpo.py  5_chat.py  chat.py  server.py
